--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,9 @@
 :root {
   --padding-container: 100px 0;
+  --color-title: #032564;
 }
 
+/* css header */
 * {
   margin: 0;
   padding: 0;
@@ -115,4 +117,47 @@
   text-decoration: none;
   padding: 13px 30px;
   border-radius: 32px;
+}
+
+/* css about */
+.about {
+  text-align: center;
+}
+
+.subtittle {
+  color: var(--color-title);
+  font-size: 2rem;
+  margin-bottom: 25px;
+}
+
+.about_paragraph {
+  line-height: 1.7;
+}
+
+.about_icons {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1em;
+  justify-items: center;
+  width: 260px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.about_icon {
+  width: 25%;
+  align-self: center;
+}
+
+.about_main {
+  padding-top: 80px;
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+  gap: 1em;
+  overflow: hidden;
+}
+
+article img {
+  color: #0d75d7;
 }
