--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,6 +158,39 @@
   overflow: hidden;
 }
 
-article img {
-  color: #0d75d7;
+/* css knowledge */
+.knowledge {
+  background-color: #e5e5f7;
+  opacity: 0.8;
+  background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px),
+    radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
+  overflow: hidden;
+}
+
+.knowledge_container {
+  display: flex;
+  gap: 1em;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.knowledge_texts {
+  width: 50%;
+}
+
+.knowledge_picture {
+  width: 50%;
+  max-width: 500px;
+}
+
+.knowledge_img {
+  width: 100%;
+  display: block;
+}
+
+.knowledge_paragraph {
+  line-height: 1.7;
+  margin-bottom: 15px;
 }
