--- a/CSS/style.css
+++ b/CSS/style.css
@@ -194,3 +194,82 @@
   line-height: 1.7;
   margin-bottom: 15px;
 }
+
+/* css section */
+.seccion {
+  width: 100%;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 800px;
+  position: relative;
+}
+
+.mi_seccion {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: var(--padding-container);
+}
+
+.titulo_seccion {
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  margin: 15px;
+  padding: 25px 0;
+  font-size: 30px;
+}
+
+.seccion_creacion {
+  display: flex;
+  gap: 1em;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 250px;
+  padding: 13px 30px;
+  border-radius: 6px;
+  font-size: 12px;
+}
+
+.layout h4 {
+  font-size: 30px;
+}
+.naranja_layout h4 {
+  color: #fff;
+}
+
+.gris_layout {
+  background-color: #e5e5f7;
+}
+
+.naranja_layout {
+  background-color: #ff7143;
+  height: 290px;
+  color: #fff;
+}
+.boton {
+  display: flex;
+  align-self: center;
+  width: auto;
+  text-decoration: none;
+  padding: 13px 50px;
+  border-radius: 8px;
+}
+.boton_gris {
+  background-color: #fff;
+  color: #7276db;
+}
+
+.boton_naranja {
+  background-color: #9f3919;
+  color: #fff;
+}
