--- a/CSS/style.css
+++ b/CSS/style.css
@@ -225,7 +225,7 @@
 .seccion_creacion {
   display: flex;
   gap: 1em;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
