--- a/CSS/style.css
+++ b/CSS/style.css
@@ -273,3 +273,60 @@
   background-color: #9f3919;
   color: #fff;
 }
+
+/* css testimony */
+.testimony {
+  background-color: #e5e5f7;
+}
+
+.testimony_container {
+  display: grid;
+  grid-template-columns: 50px 1fr 50px;
+  gap: 1em;
+  align-items: center;
+}
+
+.testimony_container > img {
+  width: 50px;
+}
+
+.testimony_body {
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.testimony_body--show {
+  pointer-events: unset;
+  opacity: 1;
+}
+
+.testimony_img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: 50% 30%;
+}
+
+.testimony_texts {
+  max-width: 700px;
+}
+
+.testimony_course {
+  background-color: royalblue;
+  color: #fff;
+  display: inline-block;
+  padding: 5px;
+}
+
+.testimony_arrow {
+  width: 90%;
+  cursor: pointer;
+}
