--- a/CSS/style.css
+++ b/CSS/style.css
@@ -330,3 +330,75 @@
   width: 90%;
   cursor: pointer;
 }
+/* Sección preguntas*/
+
+.questions {
+  text-align: center;
+}
+
+.questions_container {
+  display: grid;
+  gap: 2em;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.questions_padding {
+  padding: 0;
+  transition: padding 0.3s;
+  border: 1px solid #5454d4;
+  border-radius: 6px;
+}
+
+/* Esta clase se agregará dinámicante */
+
+.questions_paddinf--add {
+  padding-bottom: 30px;
+}
+
+.questions_answer {
+  padding: 0 30px;
+  overflow: hidden;
+}
+
+.questions_title {
+  text-align: left;
+  display: flex;
+  font-size: 20px;
+  padding: 30px 0;
+  cursor: pointer;
+  color: var(--color-title);
+  justify-content: space-between;
+}
+
+.questions_arrow {
+  border-radius: 50%;
+  background-color: var(--color-title);
+  width: 25px;
+  height: 25px;
+  transform: transform 0.3s;
+}
+
+.questions_arrow--rotate {
+  transform: rotate(180deg);
+}
+
+.questions_show {
+  text-align: left;
+  height: 0;
+  transition: height 0.3s;
+}
+
+.questions_img {
+  display: block;
+}
+
+.questions_offer {
+  display: grid;
+  justify-items: center;
+}
+
+.questions_copy {
+  width: 60%;
+  margin-bottom: 30px;
+}
